- Fixes Weapon Manager GUI weapon selection glitch.
- Fixes gun reticles floating a few meters in front of the weapon.
- Fix subMunitionCount = 0 in custom bullet/rocket defs breaking weapons.
- Fix Protect VIP(s) target priority for when there are more than 2 teams.
IMPROVEMENTS
- General:
	- Add in the remaining localisations for parts.
	- Add hotkey option for time scaling.
- AI:
	- Use maxAllowedAoA in post-stall test in FlyToPosition instead of hard-coded 30°.
	- Tweak the clamped altitude and speed min/max values to give more usable sliders.
	- Scale steer limiter based on atmospheric density in order to account how dynamic pressure will vary based on this value.
	- Add the target's average radius to the vessel-avoidance detection.
	- Adjust the default vessel-avoidance values and increase the upper limit of the avoidance strength slider.
	- Use an average of the recent speed instead of the max speed in determining the turn radius.
	- Adjust the extending to update the extend-from position when the extend-from target is a vessel.
	- Replace the extend multiplier with explicit extend distances for air-to-air, air-to-ground (guns) and air-to-ground.
- WM:
	- Add a Protect Teammates target priority.
- GameModes:
	- Add options for respecting the flow state of stealing (in)/stolen (out) resources.
- UI:
	- Add a "Slider Resolution" slider to the pilot AI (currently just PID, Altitudes and Speeds) to allow finer or coarser adjustments to those sliders in the PAW (not the AI GUI for now).
- Weapons:
	- Add in option to set an action group toggled for when weapons are selected/deselected (can be used for deploying weapons or for other actions).
	- Ammo belt tool now loads in existing belts, if present.
	- Abrams can now properly select ammo types in flight.
- Armor:
	- Configurable Armor panels should cause less lag on loading in.
- Tournamements: