@@ -305,6 +305,7 @@ Localization
         #LOC_BDArmory_Settings_RWRWindowScale = RWR Window Scale
         #LOC_BDArmory_Settings_RadarWindowScale = Radar Window Scale
         #LOC_BDArmory_Settings_TargetWindowScale = Target Window Scale
+        #LOC_BDArmory_Settings_TargetWindowInvertMouse = Invert Mouse (Targeting Window)
         #LOC_BDArmory_Settings_TriggerHold = Trigger Hold
         #LOC_BDArmory_Settings_UIVolume = UI Volume
         #LOC_BDArmory_Settings_WeaponVolume = Weapon Volume
